cocoindex_macro/tests/ui/cached_missing_ctx.stderr
error[E0425]: cannot find value `ctx` in this scope
 --> tests/ui/cached_missing_ctx.rs:5:1
  |
5 | #[cached]
  | ^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the attribute macro `cached` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
 --> tests/ui/cached_missing_ctx.rs:5:1
  |
5 | #[cached]
  | ^^^^^^^^^ doesn't have a size known at compile-time
  |
  = help: the trait `Sized` is not implemented for `[u8]`
  = note: all local variables must have a statically known size
  = note: this error originates in the attribute macro `cached` (in Nightly builds, run with -Z macro-backtrace for more info)
